infra/kubernetes-ansible/roles/app_deployment/files/hello-world-deployment.yaml
# kubernetes-ansible/roles/app_deployment/files/hello-world-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
  labels:
    app: hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world-app
        image: nginxdemos/hello
        ports:
        - containerPort: 80
